--- a/secondact.html
+++ b/secondact.html
@@ -9,15 +9,19 @@
 <body>
 <h6 class="name">BROVIK.</h6>
 
-<p2 class="Direction">[With warmth.]</p2> <p1 class="speech">I will not go till he comes! I and determined to have
-it out this evening with--</p1><p2 class="Direction">[in a tone of suppressed bitterness]</p2>--with
-him--with the chief.
+<p2 class="Direction">[With warmth.]</p2>
 
+<p1 class="speech">I will not go till he comes! I and determined to have it out this evening with--</p1>
+
+<p2 class="Direction">[in a tone of suppressed bitterness]</p2>
+
+<p1 class="speech">--with him--with the chief.</p1>
 
 <h6 class="name">KAIA.</h6>
 
-<p2 class="Direction">[Anxiously.] </p2><p1 class="speech">Oh no, uncle,--do wait awhile before doing that!</p1>
+<p2 class="Direction">[Anxiously.] </p2>
 
+<p1 class="speech">Oh no, uncle,--do wait awhile before doing that!</p1>
 
 <h6 class="name">RAGNAR.</h6>
 
@@ -27,9 +31,7 @@ him--with the chief.
 
 <p2 class="Direction">[Draws is breath laboriously.] </p2>
 
-<p1 class="speech">! _I_ haven't much time for
-waiting.</p1>
-
+<p1 class="speech">! _I_ haven't much time for waiting.</p1>
 
 <h6 class="name">KAIA.</h6>
 
@@ -40,7 +42,6 @@ He is a man no longer young, but healthy and vigorous, with close-cut curly hair
 greyish-green buttoned jacket with an upstanding collar and broad lapels.  On his head he wears a soft grey felt hat,
 and he has one or two light portfolios under his arm.</p1>
 
-
 <h6 class="name">SOLNESS.</h6>
 
 <p2 class="Direction">[Near the door, points towards the draughtsmen's office, and asks in a
@@ -48,7 +49,6 @@ whisper:]</p2>
 
 <p1 class="speech">Are they gone?</p1>
 
-<br>
 <br>
 
 <table>
@@ -74,6 +74,21 @@ whisper:]</p2>
     </tr>
   </table>
 <a  href="playpart.html">PLAYPART</a>
-
 </body>
+<footer>
+  <footer>
+    <div class="navbar">
+      <ul>
+        <li> <a href="playpart.html">First Act</a></li>
+        <li> <a href="secondact.html">Second Act</a></li>
+      </ul>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <img src="img1.jpg" alt="Picture 1">
+    <img src="img2.jpg" alt="Picture 2">
+  </footer>
+</footer>
 </html>
