--- a/playpart.html
+++ b/playpart.html
@@ -117,4 +117,20 @@
         </table>
         <a  href="secondact.html">EXTRA</a>
 </body>
+<footer>
+  <footer>
+    <div class="navbar">
+      <ul>
+        <li> <a href="playpart.html">First Act</a></li>
+        <li> <a href="secondact.html">Second Act</a></li>
+      </ul>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <img src="img1.jpg" alt="Picture 1">
+    <img src="img2.jpg" alt="Picture 2">
+  </footer>
+</footer>
 </html>
