--- a/playpart.html
+++ b/playpart.html
@@ -115,7 +115,7 @@
             <td>WELL-DRESSED</td>
           </tr>
         </table>
-        <a  href="secondact.html">EXTRA</a>
+        <a  href="secondact.html">SECONDACT</a>
 </body>
 <footer>
   <footer>
